Fixed overlapping API dropdown (#2459)

--- a/src/themes/website/styles/docs.scss
+++ b/src/themes/website/styles/docs.scss
@@ -176,6 +176,7 @@ api-list,
 api-list-dropdown,
 api-list-tiles {
     flex-basis: 100%;
+    max-width: 100%;
 }
 
 .line-clamp {
